supply frontend with data from graphql-service

--- a/backend/beehive-monitor/graphql-service/src/main/resources/application.properties
+++ b/backend/beehive-monitor/graphql-service/src/main/resources/application.properties
@@ -30,6 +30,10 @@ quarkus.smallrye-graphql.show-runtime-exception-message=\
 com.daham.core.services.BadQueryException,\
 com.daham.core.services.InternalServerException,\
 com.daham.core.services.NotFoundException
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:3000
+quarkus.http.cors.methods=GET,POST,OPTIONS
+quarkus.http.cors.headers=Content-Type,Authorization
 #
 # PROMETHEUS
 #
@@ -46,3 +50,5 @@ quarkus.smallrye-graphql.metrics.enabled=true
 #
 quarkus.grpc.server.use-separate-server=false
 # quarkus.grpc.server.port=9000
+
+
