--- a/frontend/beehive-dashboard/package.json
+++ b/frontend/beehive-dashboard/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.5.0",
+    "graphql": "^16.11.0",
     "mqtt": "^5.13.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
