MUS2: updated backend and frontend

--- a/backend/beehive-monitor/data-producer/src/main/resources/application.properties
+++ b/backend/beehive-monitor/data-producer/src/main/resources/application.properties
@@ -8,7 +8,7 @@ quarkus.datasource.jdbc.driver=org.h2.Driver
 #
 # HIBERNATE
 #
-quarkus.hibernate-orm.database.generation=create
+quarkus.hibernate-orm.database.generation=drop-
 quarkus.hibernate-orm.log.sql=false
 quarkus.hibernate-orm.show-sql=false
 #
