--- a/backend/beehive-monitor/data-analysis-service/src/main/resources/application.properties
+++ b/backend/beehive-monitor/data-analysis-service/src/main/resources/application.properties
@@ -16,7 +16,7 @@ quarkus.datasource.jdbc.pooling-enabled=true
 #
 # HIBERNATE
 #
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=false
 quarkus.hibernate-orm.log.format-sql=false
 #
