--- a/backend/beehive-monitor/gateway-service/src/main/resources/application.yml
+++ b/backend/beehive-monitor/gateway-service/src/main/resources/application.yml
@@ -22,6 +22,21 @@ spring:
           - rest
 
     gateway:
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOriginPatterns: "*"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - OPTIONS
+              - HEAD
+            allowedHeaders: "*"
+            allowCredentials: true
+            maxAge: 3600
+
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
 
