--- a/frontend/beehive-dashboard/package.json
+++ b/frontend/beehive-dashboard/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.5.0",
     "graphql": "^16.11.0",
+    "graphql-ws": "^5.16.2",
     "mqtt": "^5.13.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
