MUS2: finished arduino native code

--- a/arduino/data-provider/platformio.ini
+++ b/arduino/data-provider/platformio.ini
@@ -14,5 +14,7 @@ board = mkrwan1310
 framework = arduino
 lib_deps =
     adafruit/DHT sensor library@^1.4.6
-    adafruit/Adafruit HX711@^1.0.2
     arduino-libraries/MKRWAN@^1.1.1
+    khoih-prog/FlashStorage_SAMD@^1.3.2
+    olkal/HX711_ADC@^1.2.12
+    
